feat(blitter-api): Cleanup Api Security
